# program-verification-project1

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: ivl.rs  ivl_ext.rs  lib.rs  main.rs
tests/: abstract-function-bad.slang  abstract-function-good.slang  assert-assign-bad.slang  assert-assign-good.slang  assert-assign-swap.slang  assert-false.slang  assert-sum-bad.slang  assert-sum-good.slang  assert-true-false.slang  assert-true.slang  assume-false.slang  assume-true.slang  break-good.slang  break-invariants-help.slang  break-paths-complex.slang  broke-bad.slang  broke-good.slang  continue-good.slang  continue-invariant-bad.slang  continue-variant-bad.slang  continue-variant-good.slang  core-feature-A-bad.slang  core-feature-A-good.slang  custom-type-bad.slang  custom-type-good.slang  division-by-zero-double.slang  division-by-zero-single.slang  division-by-zero-tenary-bad.slang  division-by-zero-tenary-good.slang  dsa-bad.slang  dsa-good.slang  dsa-test.slang  early-return-bad.slang  early-return-good.slang  early-return-maccarthy-good.slang  error-masking.slang  exercise8.3-bad.slang  exercise8.3.slang  feature-10-good.slang  feature-2-good.slang  (+53 more)
