[package]
name = "slang-template"
version = "0.1.0"
edition = "2021"

[dependencies]
datatest-stable = "0.2.9"
itertools = "0.13.0"
regex = "1.10.6"
slang-ui = { git = "https://github.com/oembo-sse/slang" }
tokio = { version = "1.40.0", features = ["full"] }

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[[test]]
name = "tests"
harness = false
